crates/runtime/tests/ready_state/snapshots/integration__ready_state__ready_state_on_load_native_arrow_acceleration.snap
---
source: crates/runtime/tests/ready_state/mod.rs
expression: explain_str_fallback
---
+--------------+-----------------------------------------------------+
| plan_type    | plan                                                |
+--------------+-----------------------------------------------------+
| logical_plan | BytesProcessedNode                                  |
|              |   TableScan: native_on_registration projection=[id] |
+--------------+-----------------------------------------------------+
