crates/runtime/tests/ready_state/snapshots/integration__ready_state__ready_state_on_registration_federated_duckdb_acceleration-2.snap
---
source: crates/runtime/tests/ready_state/mod.rs
expression: explain_str_acceleration
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                        |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | BytesProcessedNode                                                                                                                                                                                                          |
|               |   Federated                                                                                                                                                                                                                 |
|               |  Projection: federated_on_registration.id                                                                                                                                                                                   |
|               |   TableScan: federated_on_registration projection=[id]                                                                                                                                                                      |
| physical_plan | BytesProcessedExec                                                                                                                                                                                                          |
|               |   SchemaCastScanExec                                                                                                                                                                                                        |
|               |     VirtualExecutionPlan name=duckdb compute_context=:memory: sql=SELECT federated_on_registration.id FROM federated_on_registration rewritten_sql=SELECT "federated_on_registration"."id" FROM "federated_on_registration" |
|               |                                                                                                                                                                                                                             |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
