crates/runtime/tests/ready_state/snapshots/integration__ready_state__ready_state_on_registration_federated_duckdb_acceleration.snap
---
source: crates/runtime/tests/ready_state/mod.rs
expression: explain_str_fallback
---
+---------------+--------------------------------------------------------+
| plan_type     | plan                                                   |
+---------------+--------------------------------------------------------+
| logical_plan  | BytesProcessedNode                                     |
|               |   TableScan: federated_on_registration projection=[id] |
| physical_plan | BytesProcessedExec                                     |
|               |   MemoryExec: partitions=1, partition_sizes=[1]        |
|               |                                                        |
+---------------+--------------------------------------------------------+
