crates/runtime/tests/ready_state/snapshots/integration__ready_state__ready_state_on_registration_native_arrow_acceleration-2.snap
---
source: crates/runtime/tests/ready_state/mod.rs
expression: explain_str_acceleration
---
+---------------+-----------------------------------------------------+
| plan_type     | plan                                                |
+---------------+-----------------------------------------------------+
| logical_plan  | BytesProcessedNode                                  |
|               |   TableScan: native_on_registration projection=[id] |
| physical_plan | BytesProcessedExec                                  |
|               |   SchemaCastScanExec                                |
|               |     MemoryExec: partitions=1, partition_sizes=[1]   |
|               |                                                     |
+---------------+-----------------------------------------------------+
