crates/runtime/tests/ready_state/snapshots/integration__ready_state__ready_state_on_registration_native_duckdb_acceleration-2.snap
---
source: crates/runtime/tests/ready_state/mod.rs
expression: explain_str_acceleration
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                            |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | BytesProcessedNode                                                                                                                                                                                              |
|               |   Federated                                                                                                                                                                                                     |
|               |  Projection: native_on_registration.id                                                                                                                                                                          |
|               |   TableScan: native_on_registration projection=[id]                                                                                                                                                             |
| physical_plan | BytesProcessedExec                                                                                                                                                                                              |
|               |   SchemaCastScanExec                                                                                                                                                                                            |
|               |     VirtualExecutionPlan name=duckdb compute_context=:memory: sql=SELECT native_on_registration.id FROM native_on_registration rewritten_sql=SELECT "native_on_registration"."id" FROM "native_on_registration" |
|               |                                                                                                                                                                                                                 |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
